# data_filter

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: processed_xvla.yaml  raw_pika.yaml  raw_teleop.yaml
data_filter/: config.py  pipeline.py  scoring.py
data_filter/adapters/: base.py
data_filter/checks/: _stats.py  attrs.py  base.py  extreme.py  gripper.py  manifest.py  modality.py  motion.py  raw_activity.py  rot6d.py  spike.py  state_action.py  timestamp.py  tracking.py  validity.py  video.py
data_filter/io/: loaders.py  schema.py
data_filter/report/: writer.py
docs/: CONTEXT.md  V1_FEISHU.md  spec.md
scripts/: run_filter.py  run_final_reports.sh
tests/: _fixtures.py  test_checks.py  test_loaders.py  test_pipeline.py  test_processed_v1.py
